--- a/Investigating-fandango-movie-ratings/basic.ipynb
+++ b/Investigating-fandango-movie-ratings/basic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e73dc616",
+   "id": "90f1561d",
    "metadata": {},
    "source": [
     "## Understanding the Data\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "18b1bdb4",
+   "id": "4dcb607d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4868c285",
+   "id": "4c6f6bde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2a67b905",
+   "id": "9f1cfc0b",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd17cdfc",
+   "id": "a77d0211",
    "metadata": {},
    "source": [
     "We have shown that we can't find information about `fandango` movies in `movie_ratings` dataset."
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b137b672",
+   "id": "4db32836",
    "metadata": {},
    "source": [
     "This could be due to the fact that the dataset has specific sampling characteristics:\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1247e96",
+   "id": "20ccef48",
    "metadata": {},
    "source": [
     "## Changing the Goal of our Analysis\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70f7071",
+   "id": "2fd4b8c5",
    "metadata": {},
    "source": [
     "## 4. Isolating the Samples We Need\n",
@@ -161,19 +161,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6efebe8",
+   "cell_type": "markdown",
+   "id": "c8996b58",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Great, now let's isolate the movies in the other data set.\n"
+    "Great, now let's isolate the movies in the other data set."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "35ad3f26",
+   "id": "8ea8febc",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d23cce1",
+   "id": "0e5798a3",
    "metadata": {},
    "source": [
     "We can see that all the movies have more than 30 reviews."
@@ -201,16 +199,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10eab59c",
+   "id": "e7b1d320",
    "metadata": {},
    "source": [
+    "We'll isolate the movies released in 2015.\n",
     "For `fandango previous` we need to extract the year values from `FILM` column, the pattern are `Film name (year:int)`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "37025777",
+   "execution_count": 5,
+   "id": "34ee00fc",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +220,7 @@
        "Name: Year, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,8 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "66b9ef5f",
+   "execution_count": 6,
+   "id": "ccb82dbf",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +245,7 @@
        "Name: Year, dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,19 +256,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "186aaf52",
+   "cell_type": "markdown",
+   "id": "185cfea9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Now we'll isolate the movies  in the other data set."
+    "Now we'll isolate the movies released in 2016 in the other data set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "6c496700",
+   "execution_count": 7,
+   "id": "b2effebb",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +277,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,8 +288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "9b49e5f1",
+   "execution_count": 8,
+   "id": "d3edc8c7",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +299,7 @@
        "Name: year, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
