--- a/A-finding-the-best-markets-to-advertise-in/basic.ipynb
+++ b/A-finding-the-best-markets-to-advertise-in/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57c48413",
+   "id": "29b2716b",
    "metadata": {},
    "source": [
     "# A-finding-the-best-markets-to-advertise-in\n",
@@ -13,12 +13,300 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a435f81",
+   "cell_type": "markdown",
+   "id": "2c54e261",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Understanding the Data\n",
+    "\n",
+    "We can try to search existing data that might be relevant for our purpose. One good candidate is the data from [freeCodeCamp's 2017 New Coder Survey](https://www.freecodecamp.org/news/we-asked-20-000-people-who-they-are-and-how-theyre-learning-to-code-fff5d668969/). [freeCodeCamp](freecodecamp.org) is a free e-learning platform that offers courses on web development. \n",
+    "\n",
+    "The survey data is publicly available in this [GitHub repository](https://github.com/freeCodeCamp/2017-new-coder-survey)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e0b75372",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'AttendedBootcamp', 'BootcampFinish', 'BootcampLoanYesNo',\n",
+       "       'BootcampName', 'BootcampRecommend', 'ChildrenNumber', 'CityPopulation',\n",
+       "       'CodeEventConferences', 'CodeEventDjangoGirls',\n",
+       "       ...\n",
+       "       'YouTubeFCC', 'YouTubeFunFunFunction', 'YouTubeGoogleDev',\n",
+       "       'YouTubeLearnCode', 'YouTubeLevelUpTuts', 'YouTubeMIT',\n",
+       "       'YouTubeMozillaHacks', 'YouTubeOther', 'YouTubeSimplilearn',\n",
+       "       'YouTubeTheNewBoston'],\n",
+       "      dtype='object', length=136)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "surveys = pd.read_csv('2017-fCC-New-Coders-Survey-Data.csv')\n",
+    "\n",
+    "surveys.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "913b3829",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18175, 136)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surveys.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "59d11081",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>AttendedBootcamp</th>\n",
+       "      <th>BootcampFinish</th>\n",
+       "      <th>BootcampLoanYesNo</th>\n",
+       "      <th>BootcampName</th>\n",
+       "      <th>BootcampRecommend</th>\n",
+       "      <th>ChildrenNumber</th>\n",
+       "      <th>CityPopulation</th>\n",
+       "      <th>CodeEventConferences</th>\n",
+       "      <th>CodeEventDjangoGirls</th>\n",
+       "      <th>...</th>\n",
+       "      <th>YouTubeFCC</th>\n",
+       "      <th>YouTubeFunFunFunction</th>\n",
+       "      <th>YouTubeGoogleDev</th>\n",
+       "      <th>YouTubeLearnCode</th>\n",
+       "      <th>YouTubeLevelUpTuts</th>\n",
+       "      <th>YouTubeMIT</th>\n",
+       "      <th>YouTubeMozillaHacks</th>\n",
+       "      <th>YouTubeOther</th>\n",
+       "      <th>YouTubeSimplilearn</th>\n",
+       "      <th>YouTubeTheNewBoston</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>more than 1 million</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>less than 100,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>more than 1 million</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>between 100,000 and 1 million</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>between 100,000 and 1 million</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 136 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age  AttendedBootcamp  BootcampFinish  BootcampLoanYesNo BootcampName  \\\n",
+       "0  27.0               0.0             NaN                NaN          NaN   \n",
+       "1  34.0               0.0             NaN                NaN          NaN   \n",
+       "2  21.0               0.0             NaN                NaN          NaN   \n",
+       "3  26.0               0.0             NaN                NaN          NaN   \n",
+       "4  20.0               0.0             NaN                NaN          NaN   \n",
+       "\n",
+       "   BootcampRecommend  ChildrenNumber                 CityPopulation  \\\n",
+       "0                NaN             NaN            more than 1 million   \n",
+       "1                NaN             NaN              less than 100,000   \n",
+       "2                NaN             NaN            more than 1 million   \n",
+       "3                NaN             NaN  between 100,000 and 1 million   \n",
+       "4                NaN             NaN  between 100,000 and 1 million   \n",
+       "\n",
+       "   CodeEventConferences  CodeEventDjangoGirls  ...  YouTubeFCC  \\\n",
+       "0                   NaN                   NaN  ...         NaN   \n",
+       "1                   NaN                   NaN  ...         1.0   \n",
+       "2                   NaN                   NaN  ...         NaN   \n",
+       "3                   NaN                   NaN  ...         1.0   \n",
+       "4                   NaN                   NaN  ...         NaN   \n",
+       "\n",
+       "   YouTubeFunFunFunction  YouTubeGoogleDev  YouTubeLearnCode  \\\n",
+       "0                    NaN               NaN               NaN   \n",
+       "1                    NaN               NaN               NaN   \n",
+       "2                    NaN               NaN               1.0   \n",
+       "3                    1.0               NaN               NaN   \n",
+       "4                    NaN               NaN               NaN   \n",
+       "\n",
+       "   YouTubeLevelUpTuts  YouTubeMIT  YouTubeMozillaHacks YouTubeOther  \\\n",
+       "0                 NaN         NaN                  NaN          NaN   \n",
+       "1                 NaN         NaN                  NaN          NaN   \n",
+       "2                 1.0         NaN                  NaN          NaN   \n",
+       "3                 1.0         NaN                  NaN          NaN   \n",
+       "4                 NaN         NaN                  NaN          NaN   \n",
+       "\n",
+       "   YouTubeSimplilearn  YouTubeTheNewBoston  \n",
+       "0                 NaN                  NaN  \n",
+       "1                 NaN                  NaN  \n",
+       "2                 NaN                  NaN  \n",
+       "3                 NaN                  NaN  \n",
+       "4                 NaN                  NaN  \n",
+       "\n",
+       "[5 rows x 136 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surveys.head()"
+   ]
   }
  ],
  "metadata": {
