4. New Coders - Locations and Densities

--- a/A-finding-the-best-markets-to-advertise-in/basic.ipynb
+++ b/A-finding-the-best-markets-to-advertise-in/basic.ipynb
@@ -26,10 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "21d4bdc0",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aguirredaniel/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3165: DtypeWarning: Columns (17,62) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -44,7 +52,7 @@
        "      dtype='object', length=136)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "329b7c34",
    "metadata": {},
    "outputs": [
@@ -68,7 +76,7 @@
        "(18175, 136)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "c835a853",
    "metadata": {},
    "outputs": [
@@ -299,7 +307,7 @@
        "[5 rows x 136 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,28 +332,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "id": "9d56f0c5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Full-Stack Web Developer                                                                                                                                                                                                   11.770595\n",
-       "  Front-End Web Developer                                                                                                                                                                                                   6.435927\n",
-       "  Data Scientist                                                                                                                                                                                                            2.173913\n",
-       "Back-End Web Developer                                                                                                                                                                                                      2.030892\n",
-       "  Mobile Developer                                                                                                                                                                                                          1.673341\n",
-       "                                                                                                                                                                                                                             ...    \n",
-       "  Mobile Developer, Full-Stack Web Developer,   User Experience Designer,   Front-End Web Developer, Back-End Web Developer, Information Security,   Product Manager                                                        0.014302\n",
-       "  Mobile Developer,   Data Scientist, Back-End Web Developer, Full-Stack Web Developer,   DevOps / SysAdmin                                                                                                                 0.014302\n",
-       "  Data Scientist, Back-End Web Developer,   Mobile Developer,   Front-End Web Developer, Information Security, Full-Stack Web Developer                                                                                     0.014302\n",
-       "Full-Stack Web Developer,   Mobile Developer,   Product Manager, Back-End Web Developer,   User Experience Designer,   Front-End Web Developer                                                                              0.014302\n",
-       "  Front-End Web Developer,   Data Scientist, Data Engineer, Full-Stack Web Developer,   DevOps / SysAdmin, Back-End Web Developer, Information Security,   User Experience Designer,   Mobile Developer, Game Developer     0.014302\n",
+       "Full-Stack Web Developer                                                                                                                                                                                                                 11.770595\n",
+       "  Front-End Web Developer                                                                                                                                                                                                                 6.435927\n",
+       "  Data Scientist                                                                                                                                                                                                                          2.173913\n",
+       "Back-End Web Developer                                                                                                                                                                                                                    2.030892\n",
+       "  Mobile Developer                                                                                                                                                                                                                        1.673341\n",
+       "                                                                                                                                                                                                                                           ...    \n",
+       "  Mobile Developer, Data Engineer,   Front-End Web Developer, Full-Stack Web Developer,   User Experience Designer,   Data Scientist                                                                                                      0.014302\n",
+       "  Mobile Developer,   User Experience Designer,   Data Scientist,   Front-End Web Developer,   Quality Assurance Engineer,   DevOps / SysAdmin, Full-Stack Web Developer, Data Engineer, Information Security, Back-End Web Developer     0.014302\n",
+       "Full-Stack Web Developer,   Front-End Web Developer,   Mobile Developer,   Data Scientist,   Product Manager,   User Experience Designer                                                                                                  0.014302\n",
+       "Back-End Web Developer,   User Experience Designer, Full-Stack Web Developer,   Product Manager,   Front-End Web Developer, Information Security, Data Engineer,   Data Scientist,   Mobile Developer                                     0.014302\n",
+       "  Quality Assurance Engineer,   Front-End Web Developer, Full-Stack Web Developer, Back-End Web Developer, Desktop Application Developer                                                                                                  0.014302\n",
        "Name: JobRoleInterest, Length: 3213, dtype: float64"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "id": "6b99978f",
    "metadata": {},
    "outputs": [
@@ -369,7 +377,7 @@
        "68.34954233409611"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 6,
    "id": "c22d019f",
    "metadata": {},
    "outputs": [
@@ -399,7 +407,7 @@
        "(86.3129290617849, 13.6870709382151)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 7,
    "id": "f669ac10",
    "metadata": {},
    "outputs": [
@@ -447,6 +455,104 @@
    "source": [
     "We can see 86% of people are interested in web or mobile develiment."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef08ae90",
+   "metadata": {},
+   "source": [
+    "## New Coders - Locations and Densities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0dce7c2",
+   "metadata": {},
+   "source": [
+    "To make sure you're working with a representative sample, drop all the rows where participants didn't answer what role they are interested in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "96211718",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "surveys.dropna(subset=['JobRoleInterest'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1b4d0901",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United States of America    3125\n",
+       "India                        528\n",
+       "United Kingdom               315\n",
+       "Canada                       260\n",
+       "Poland                       131\n",
+       "                            ... \n",
+       "Angola                         1\n",
+       "Sudan                          1\n",
+       "Gambia                         1\n",
+       "Rwanda                         1\n",
+       "Somalia                        1\n",
+       "Name: CountryLive, Length: 137, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surveys['CountryLive'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f1c7c20f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United States of America    45.700497\n",
+       "India                        7.721556\n",
+       "United Kingdom               4.606610\n",
+       "Canada                       3.802281\n",
+       "Poland                       1.915765\n",
+       "                              ...    \n",
+       "Angola                       0.014624\n",
+       "Sudan                        0.014624\n",
+       "Gambia                       0.014624\n",
+       "Rwanda                       0.014624\n",
+       "Somalia                      0.014624\n",
+       "Name: CountryLive, Length: 137, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surveys['CountryLive'].value_counts(normalize=True) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f5b125e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
