5. Spending Money for Learning

--- a/A-finding-the-best-markets-to-advertise-in/basic.ipynb
+++ b/A-finding-the-best-markets-to-advertise-in/basic.ipynb
@@ -339,17 +339,17 @@
     {
      "data": {
       "text/plain": [
-       "Full-Stack Web Developer                                                                                                                                                                                                                 11.770595\n",
-       "  Front-End Web Developer                                                                                                                                                                                                                 6.435927\n",
-       "  Data Scientist                                                                                                                                                                                                                          2.173913\n",
-       "Back-End Web Developer                                                                                                                                                                                                                    2.030892\n",
-       "  Mobile Developer                                                                                                                                                                                                                        1.673341\n",
-       "                                                                                                                                                                                                                                           ...    \n",
-       "  Mobile Developer, Data Engineer,   Front-End Web Developer, Full-Stack Web Developer,   User Experience Designer,   Data Scientist                                                                                                      0.014302\n",
-       "  Mobile Developer,   User Experience Designer,   Data Scientist,   Front-End Web Developer,   Quality Assurance Engineer,   DevOps / SysAdmin, Full-Stack Web Developer, Data Engineer, Information Security, Back-End Web Developer     0.014302\n",
-       "Full-Stack Web Developer,   Front-End Web Developer,   Mobile Developer,   Data Scientist,   Product Manager,   User Experience Designer                                                                                                  0.014302\n",
-       "Back-End Web Developer,   User Experience Designer, Full-Stack Web Developer,   Product Manager,   Front-End Web Developer, Information Security, Data Engineer,   Data Scientist,   Mobile Developer                                     0.014302\n",
-       "  Quality Assurance Engineer,   Front-End Web Developer, Full-Stack Web Developer, Back-End Web Developer, Desktop Application Developer                                                                                                  0.014302\n",
+       "Full-Stack Web Developer                                                                                                                            11.770595\n",
+       "  Front-End Web Developer                                                                                                                            6.435927\n",
+       "  Data Scientist                                                                                                                                     2.173913\n",
+       "Back-End Web Developer                                                                                                                               2.030892\n",
+       "  Mobile Developer                                                                                                                                   1.673341\n",
+       "                                                                                                                                                      ...    \n",
+       "  Front-End Web Developer, Full-Stack Web Developer,   User Experience Designer, Back-End Web Developer,   Product Manager                           0.014302\n",
+       "  User Experience Designer,   Product Manager,   Mobile Developer, Information Security                                                              0.014302\n",
+       "Back-End Web Developer,   Mobile Developer, Data Engineer, Full-Stack Web Developer,   Data Scientist, Information Security,   DevOps / SysAdmin     0.014302\n",
+       "  Mobile Developer, Back-End Web Developer, Game Developer,   Front-End Web Developer                                                                0.014302\n",
+       "Full-Stack Web Developer, Back-End Web Developer,   Front-End Web Developer,   Data Scientist                                                        0.014302\n",
        "Name: JobRoleInterest, Length: 3213, dtype: float64"
       ]
      },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef08ae90",
+   "id": "c1e79c32",
    "metadata": {},
    "source": [
     "## New Coders - Locations and Densities"
@@ -466,7 +466,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0dce7c2",
+   "id": "431af7a6",
+   "metadata": {},
+   "source": [
+    "For our analysis, we'll work with the `CountryLive` variable because we're interested where people actually live at the moment when we run the ads. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f138a0c",
    "metadata": {},
    "source": [
     "To make sure you're working with a representative sample, drop all the rows where participants didn't answer what role they are interested in"
@@ -474,8 +482,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "96211718",
+   "execution_count": 8,
+   "id": "f460959b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,8 +492,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1b4d0901",
+   "execution_count": 9,
+   "id": "d5f71ab4",
    "metadata": {},
    "outputs": [
     {
@@ -497,15 +505,15 @@
        "Canada                       260\n",
        "Poland                       131\n",
        "                            ... \n",
-       "Angola                         1\n",
-       "Sudan                          1\n",
-       "Gambia                         1\n",
+       "Nicaragua                      1\n",
        "Rwanda                         1\n",
-       "Somalia                        1\n",
+       "Turkmenistan                   1\n",
+       "Cameroon                       1\n",
+       "Bolivia                        1\n",
        "Name: CountryLive, Length: 137, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,8 +524,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f1c7c20f",
+   "execution_count": 10,
+   "id": "3f491a47",
    "metadata": {},
    "outputs": [
     {
@@ -529,15 +537,15 @@
        "Canada                       3.802281\n",
        "Poland                       1.915765\n",
        "                              ...    \n",
-       "Angola                       0.014624\n",
-       "Sudan                        0.014624\n",
-       "Gambia                       0.014624\n",
+       "Nicaragua                    0.014624\n",
        "Rwanda                       0.014624\n",
-       "Somalia                      0.014624\n",
+       "Turkmenistan                 0.014624\n",
+       "Cameroon                     0.014624\n",
+       "Bolivia                      0.014624\n",
        "Name: CountryLive, Length: 137, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,12 +555,232 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5cb4ecf",
+   "metadata": {},
+   "source": [
+    "The majority (46%) of our potential clients are located in the United States of America."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8babe629",
+   "metadata": {},
+   "source": [
+    "## Spending Money for Learning\n",
+    "\n",
+    "The MoneyForLearning column describes in American dollars the amount of money spent by participants from the moment they started coding until the moment they completed the survey. Our company sells subscriptions at a price of $59 per month, and for this reason we're interested in finding out how much money each student spends per month.\n",
+    "\n",
+    "It also seems like a good idea to narrow down our analysis to only four countries: the US, India, the United Kingdom, and Canada. Two reasons for this decision are:\n",
+    "\n",
+    "- These are the countries having the highest absolute frequencies in our sample, which means we have a decent amount of data for each.\n",
+    "- Our courses are written in English, and English is an official language in all these four countries. The more people that know English, the better our chances to target the right people with our ads."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43cb985e",
+   "metadata": {},
+   "source": [
+    "We'll create a new column that describes the amount of money a student has spent per month. \n",
+    "\n",
+    "*Note: Some students answered that they had been learning to code for 0 months.*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7f5b125e",
+   "execution_count": 11,
+   "id": "546ec221",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Spent_Month</th>\n",
+       "      <th>MoneyForLearning</th>\n",
+       "      <th>MonthsProgramming</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13.333333</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18161</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18162</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18163</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18171</th>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18174</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6992 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Spent_Month  MoneyForLearning  MonthsProgramming\n",
+       "1         13.333333              80.0                6.0\n",
+       "2        200.000000            1000.0                5.0\n",
+       "3          0.000000               0.0                5.0\n",
+       "4          0.000000               0.0               24.0\n",
+       "6          0.000000               0.0               12.0\n",
+       "...             ...               ...                ...\n",
+       "18161      0.000000               0.0                6.0\n",
+       "18162      0.000000               0.0               84.0\n",
+       "18163           NaN               0.0                NaN\n",
+       "18171  10000.000000           10000.0                1.0\n",
+       "18174           NaN               NaN               10.0\n",
+       "\n",
+       "[6992 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "surveys['MonthsProgramming'] = surveys['MonthsProgramming'].apply(lambda m: m or 1)\n",
+    "surveys['Spent_Month'] = surveys['MoneyForLearning'] / surveys['MonthsProgramming']\n",
+    "\n",
+    "surveys[['Spent_Month', 'MoneyForLearning', 'MonthsProgramming']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d675300c",
+   "metadata": {},
+   "source": [
+    "We'll keep only the rows that don't have a null value for the new column and also any rows that have null values in the `CountryLive` column.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ca51d703",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "surveys.dropna(subset=['Spent_Month', 'CountryLive'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e180923f",
+   "metadata": {},
+   "source": [
+    "We'll find out how much money a student spends on average each month in the US, India, the United Kingdom and Canada."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b15349b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CountryLive\n",
+       "United States of America    227.997996\n",
+       "India                       135.100982\n",
+       "United Kingdom               45.534443\n",
+       "Canada                      113.510961\n",
+       "Name: Spent_Month, dtype: float64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "countries_spent = surveys.groupby('CountryLive').mean()\n",
+    "countries_spent['Spent_Month'][\n",
+    "    ['United States of America','India','United Kingdom','Canada']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bfa02d3",
+   "metadata": {},
+   "source": [
+    "We can see that only in the United Kingdom not enough is spent on lerning to pay the cost of our subscriptions. In the other countries more than double the cost of our subscriptions is spent. "
+   ]
   }
  ],
  "metadata": {
