7. Choosing the Two Best Markets

--- a/A-finding-the-best-markets-to-advertise-in/basic.ipynb
+++ b/A-finding-the-best-markets-to-advertise-in/basic.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d006d952",
+   "id": "68b5c0c9",
    "metadata": {},
    "source": [
     "## New Coders - Locations and Densities"
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d15d936",
+   "id": "10a782b1",
    "metadata": {},
    "source": [
     "For our analysis, we'll work with the `CountryLive` variable because we're interested where people actually live at the moment when we run the ads. "
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "330e5338",
+   "id": "d2a6e750",
    "metadata": {},
    "source": [
     "To make sure you're working with a representative sample, drop all the rows where participants didn't answer what role they are interested in"
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8647c355",
+   "id": "71d19731",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f95e06d6",
+   "id": "ccf9cb77",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "85748274",
+   "id": "391501ab",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d8e6fed",
+   "id": "fa64c1f5",
    "metadata": {},
    "source": [
     "The majority (46%) of our potential clients are located in the United States of America."
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db7c6637",
+   "id": "e6ae7611",
    "metadata": {},
    "source": [
     "## Spending Money for Learning\n",
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a018602",
+   "id": "0be7848e",
    "metadata": {},
    "source": [
     "We'll create a new column that describes the amount of money a student has spent per month. \n",
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a0495c5e",
+   "id": "08b6407e",
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24655b5a",
+   "id": "6306b7be",
    "metadata": {},
    "source": [
     "We'll keep only the rows that don't have a null value for the new column and also any rows that have null values in the `CountryLive` column.\n"
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "85806b29",
+   "id": "5c8f0f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcb3143b",
+   "id": "3f047746",
    "metadata": {},
    "source": [
     "We'll find out how much money a student spends on average each month in the US, India, the United Kingdom and Canada."
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1d808e11",
+   "id": "0752ffc9",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50211d45",
+   "id": "9dd621cc",
    "metadata": {},
    "source": [
     "We can see that only in the United Kingdom not enough is spent on learning to pay the cost of our subscriptions. In the other countries more than double the cost of our subscriptions is spent. "
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a4fb115",
+   "id": "bf98baa2",
    "metadata": {},
    "source": [
     "## Dealing with Extreme Outliers\n",
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d768e01b",
+   "id": "9ac921f0",
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a1a04f",
+   "id": "b742bd9a",
    "metadata": {},
    "source": [
     "We can observe some outliers in US, India and Canda."
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d664486",
+   "id": "dba99783",
    "metadata": {},
    "source": [
     "For US we can start eliminating the values greater than $20,000.00."
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "96be78f4",
+   "id": "3608c353",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ddde3c8f",
+   "id": "6f07d15b",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85084b2e",
+   "id": "f0809a0e",
    "metadata": {},
    "source": [
     "We can see that in the USA there are more outliers. We can think that values greater than $ 7,000.00 could be an exaggeration. We'll go to remove these values."
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1ee99b45",
+   "id": "7719ce29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e7cff7e6",
+   "id": "ea806968",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eab61c20",
+   "id": "e76d7d56",
    "metadata": {},
    "source": [
     "For India and Canda we can eliminate values greater than $ 2,500.00. "
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "860b19a8",
+   "id": "e19187ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9232d7d5",
+   "id": "81b3f302",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "57405e7e",
+   "id": "97a2181b",
    "metadata": {},
    "outputs": [
     {
@@ -988,12 +988,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "258c2871",
+   "cell_type": "markdown",
+   "id": "cf6d4a3c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Once we have removed the outliers from your data, it is it clear the US and Canada are the two best countries to choose for advertisement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b767e071",
+   "metadata": {},
+   "source": [
+    "## Choosing the Two Best Markets\n",
+    "\n",
+    "Considering the results we've found so far, one country we should definitely advertise in is the US. There are a lot of new coders living there and they are willing to pay a good amount of money each month."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f58497da",
+   "metadata": {},
+   "source": [
+    "Another possible country could be Canada, it only has only 3 percent of people interested in learning about web or mobile development, but on average people spend more to learn. Another venice is that it is a neighboring country of the US unlike India which could also be a profitable country. "
+   ]
   }
  ],
  "metadata": {
